# private-credit-bank-analysis

./: .gitignore  bufn403_dotenv.py  requirements.txt
Keyword_match_method/: pipeline_core.py  (+4 more)
bank-analysis-ai-chatbot/backend/: pyproject.toml  requirements.txt
bank-analysis-ai-chatbot/backend/.cache/: theme_anchors.json
bank-analysis-ai-chatbot/backend/eval/: questions.yaml  runner.py
bank-analysis-ai-chatbot/backend/migrations/: 001_init.sql  002_timeline.sql  003_anomalies.sql
bank-analysis-ai-chatbot/backend/scripts/: classify_chunk_topics.py  expand_banks.py  extract_8k_events.py  fetch_missing_pws.py  ingest_filings.py  ingest_transcripts.py  init_db.py  load_call_reports.py  populate_findings.py  score_chunk_sentiment.py  seed_demo.py
bank-analysis-ai-chatbot/backend/src/pc_analyst/: __init__.py  api.py  banks.py  cache.py  cli.py  config.py  db.py  mcp_server.py
bank-analysis-ai-chatbot/backend/src/pc_analyst/agent/: __init__.py  decomposer.py  loop.py  synthesizer.py
bank-analysis-ai-chatbot/backend/src/pc_analyst/anomalies/: __init__.py  anchors.py  engine.py  item_codes.py  lm_lexicon.py  queries.py  severity.py  stats.py  topic_classifier.py
bank-analysis-ai-chatbot/backend/src/pc_analyst/ingestion/: __init__.py  chunker.py  edgar.py  ffiec.py  html_parser.py  ir_remarks.py  pipeline.py
bank-analysis-ai-chatbot/backend/src/pc_analyst/mcp_tools/: __init__.py  compare_peers.py  query_call_report.py  resolve_citation.py  search_documents.py
bank-analysis-ai-chatbot/backend/tests/: test_chunker_offsets.py  test_taxonomy_and_decomposer.py
(+87 files in other folders)
